updating event and index pages

--- a/contributors.html
+++ b/contributors.html
@@ -19,17 +19,17 @@
         <img id="logo" src="img/logo.svg">
         </a>
       <div class="l-nb-link-container">
-        <a class="l-nb-item" href="info.html">Info</a>
-        <a class="l-nb-item" href="contributors.html">Contributors</a>
-        <a class="l-nb-item" href="zine.html">Zine</a>
         <a class="l-nb-item" href="events.html">Events</a>
+        <a class="l-nb-item" href="contributors.html">Contributors</a>
+        <a class="l-nb-item" href="zine.html">Webzine</a>
+        <a class="l-nb-item" href="info.html">Info</a>
       </div>
   </nav>
 
   <main>
   <!--Feature Content Section-->
     <a href="index.html">
-        <header class="box-dark l-fc l-fc-f l-fc-background">
+        <header class="box-dark l-fc l-fc-f">
           <h1>Contributors</h1>
       </header>
     </a>
