--- a/events.html
+++ b/events.html
@@ -18,11 +18,11 @@
       <a class="img l-nb-item l-nb-start"  href="index.html">
         <img id="logo" src="img/logo.svg">
         </a>
-      <div class="l-nb-link-container">
-        <a class="l-nb-item" href="info.html">Info</a>
+       <div class="l-nb-link-container">
+        <a class="l-nb-item" href="events.html">Events</a>
         <a class="l-nb-item" href="contributors.html">Contributors</a>
         <a class="l-nb-item" href="zine.html">Webzine</a>
-        <a class="l-nb-item" href="events.html">Events</a>
+        <a class="l-nb-item" href="info.html">Info</a>
       </div>
   </nav>
 
@@ -36,37 +36,40 @@
 <!--Row 1-->
   <section class="flex-container">
     <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+      <p>06.30.17</p>
+      <a href="https://www.facebook.com/events/470554953295579"><h2>09 Water</h2></a>
+      <p>Vasa Simhallen Vaasa, FI</p>
     </div>
 
     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+      <a href="https://www.facebook.com/events/470554953295579"><img src="img/jimmy-dahlberg.png"></a>
     </div>
   </section>
 
   <!--Gallery-->
   <section class="flex-container">
      <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+      <iframe width="360" height="360" src="https://www.youtube.com/embed/IOLEmwV5f88" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+      <p>06.07.17</p>
+      <a href="www.facebook.com/events/1977064915855500"><h2>08 Air</h2></a>
+      <p>Norman OK, USA</p>
     </div>
   </section>
 
-  <section class="flex-container">
+  <!--<section class="flex-container">
     <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+      <p>06.07.17</p>
+      <a href="www.facebook.com/events/264533460622860"><h2>07 Earth</h2></a>
+      <p>Norman OK, USA</p>
     </div>
 
      <div class="box-med flex-square">
       <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
     </div>
-  </section>
+  </section> -->
 
   <footer>
     <a href="https://www.facebook.com/etherexplorations/"><i class="fa fa-facebook fa-4" aria-hidden="true"></i></a>
