--- a/zine.html
+++ b/zine.html
@@ -36,35 +36,24 @@
 <!--Row 1-->
   <section class="flex-container">
     <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
+      <p>Webzine + Compilation 02</p>
+      <h2>Fresh</h2>
     </div>
 
     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+      <a href="http://placehold.it"><img src="img/fresh.png"></a>
     </div>
   </section>
 
   <!--Gallery-->
   <section class="flex-container">
      <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+      <a href="https://omni-seasonal-omens.tumblr.com/"><img src="img/omni.png"></a>
     </div>
 
     <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
-    </div>
-  </section>
-
-  <section class="flex-container">
-    <div class="box-dark flex-twothirds">
-      <p>Introductory Pharse</p>
-      <h2>Block Quote</h2>
-    </div>
-
-     <div class="box-med flex-square">
-      <a href="http://placehold.it"><img src="http://placehold.it/360x360"></a>
+      <p>Webzine + Compilation 01</p>
+      <a href="https://omni-seasonal-omens.tumblr.com/"><h2>Omniseasonal Omens</h2></a>
     </div>
   </section>
 
